# Copyright 2018 Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0

[metadata]
name = colcon-ros-bundle
version = attr: colcon_ros_bundle.__version__
url = https://colcon.readthedocs.io
keywords = colcon
description = Plugin for colcon to bundle ros applications
long_description = file: README.rst
[options]
python_requires = >=3.5
install_requires =
    colcon-core>=0.3.10, <=0.3.14
    colcon-bundle==0.0.9
    colcon-ros>=0.3.5, <=0.3.6
    rosdep<=0.14.0
    setuptools>=30.3.0
packages = find:
tests_require =
    pycodestyle==2.3.0
    flake8
    flake8-blind-except
    flake8-builtins
    flake8-class-newline
    flake8-comprehensions
    flake8-deprecated
    flake8-docstrings
    flake8-import-order
    flake8-quotes
    mock
    pep8-naming
    pyenchant
    pylint
    pytest
    pytest-cov
    pytest-asyncio
zip_safe = true
include_package_data = true

[options.entry_points]
colcon_bundle.task.bundle =
    ros.catkin = colcon_ros_bundle.task.catkin.bundle:RosCatkinBundle
    ros.cmake = colcon_ros_bundle.task.cmake.bundle:RosCmakeBundle
colcon_bundle.installer =
    rdmanifest = colcon_ros_bundle.installer.rdmanifest:RdmanifestBundleInstallerExtensionPoint


[options.packages.find]
exclude =
    test
    test.*

[tool:pytest]
junit_suite_name = colcon-bundle

[flake8]
import-order-style = google
exclude = test/assets











